# dip3

./: README.md  pyproject.toml
notebooks/: Chaper 6. Closures & Generators.ipynb  Chapeter 14. HTTP Web Services.ipynb  Chapter 1.ipynb  Chapter 11. Files.ipynb  Chapter 12. XML.ipynb  Chapter 13. Serializign Python Objects.ipynb  Chapter 2 - Native DataTypes.ipynb  Chapter 3. Comprehensions.ipynb  Chapter 4. Strings.ipynb  Chapter 5. Regular Expressions.ipynb  Chapter 7. Classes & Iterators.ipynb  Chapter 8. Advanced Iterators.ipynb  Chapter 9. Unit Testing Roman Numerals.ipynb  Chapter 9. Unit testing.ipynb
notebooks/.ipynb_checkpoints/: Chapter 1-checkpoint.ipynb
notebooks/examples/: chinese.txt  entry.json  entry.pickle  fact.py
notebooks/examples/.cache/: feeds.simplecast.comwgl4xEgL,b496a18e9957dc8549d6111ffdb28de5
