[tool.poetry]
name = "dive into python3"
version = "0.1.0"
description = ""
authors = ["Bhaskar Maddala <maddalab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
mypy-ipython = "^20.8.0"
ipython_unittest = "^0.3.1"
jupyter-dojo = "^0.3.2"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
